--- a/app/src/main/assets/de/changelog.htm
+++ b/app/src/main/assets/de/changelog.htm
@@ -9,6 +9,22 @@
 </head>
 <body>
 
+<h1>Version 3.5.2</h1>
+<ul>
+    <li>Änderungen in den letzten Updates:</li>
+    <li>Der gesamte Quellcode wurde auf GitHub veröffentlicht</li>
+    <li>Semerkand Kalender wurde hinzugefügt</li>
+    <li>Verknüpfungen für verschiedene Menu-Punkte wurden hinzugefügt</li>
+    <li>Probleme mit den Benachrichtigungen wurden behoben</li>
+    <li>Ein "Zeige Mehr" Button wurde in die Monatsansicht hinzugefügt</li>
+    <li>Ein transparentes Widget wurde hinzugefügt</li>
+    <li>Berechtigungskontrolle für Android 6+ wurde hinzugefügt</li>
+    <li>einige weitere kleine Änderungen wurden vorgenommen</li>
+    <li>Fehler wurden beseitigt...</li>
+
+</ul>
+
+
 <h1>Version 3.5.1</h1>
 <ul>
     <li>Probleme mit Adhan und Dua wurden behoben</li>
