--- a/app/src/main/assets/en/changelog.htm
+++ b/app/src/main/assets/en/changelog.htm
@@ -10,6 +10,21 @@
 </head>
 <body>
 
+<h1>Version 3.5.2</h1>
+<ul>
+    <li>Changes in the last Updates:</li>
+    <li>The Code got published under GitHub as Open Source</li>
+    <li>Semerkand Calendar added</li>
+    <li>Shortcuts for Menu-Items added</li>
+    <li>Problems with Notifications fixed</li>
+    <li>"Show more" Button in month view</li>
+    <li>Added transparent widget theme</li>
+    <li>Permission requests for Android 6+ added</li>
+    <li>some small changes</li>
+    <li>bugfixes</li>
+
+</ul>
+
 <h1>Version 3.5.1</h1>
 <ul>
     <li>Problems with Adhan and Dua solved</li>
