--- a/app/src/main/assets/tr/changelog.htm
+++ b/app/src/main/assets/tr/changelog.htm
@@ -9,6 +9,21 @@
 </head>
 <body>
 
+<h1>Version 3.5.2</h1>
+<ul>
+    <li>Son güncelemelerde yapılan degisikliler:</li>
+    <li>Uygulamanın açık kaynak kodlar'ı artık GitHub'da</li>
+    <li>Semerkand Takvimi eklendi</li>
+    <li>Uygulama bölümleri için kısayollar eklendi</li>
+    <li>Ezan/Bildirim ile ilgili sorunlar giderildi</li>
+    <li>Imsakiye'de fazla göster Buttonu eklendi</li>
+    <li>Şeffaf Widget eklendi</li>
+    <li>Android 6+ için Izin sorgulama eklendi</li>
+    <li>küçük değişiklikler oldu</li>
+    <li>hatalar düzeltildi..</li>
+
+</ul>
+
 <h1>Version 3.5.1</h1>
 <ul>
     <li>Ezan ve Dua ile ilgili sorunlar çözüldü</li>
