always pass joda objects

--- a/app/src/main/assets/en/changelog.htm
+++ b/app/src/main/assets/en/changelog.htm
@@ -28,7 +28,7 @@
 <h1>Version 3.5.1</h1>
 <ul>
     <li>Problems with Adhan and Dua solved</li>
-    <li>Added Juristic option for Calculated Asr-Time</li>
+    <li>Added Juristic option for Calculated Asr-com.metinkale.calendar.Time</li>
     <li>Added a Vibration Mode to the Dhikr-Function</li>
     <li>Added Option to hide icons from Ongoing Notification</li>
     <li>fixed some issues...</li>
