--- a/app/src/main/assets/de/changelog.htm
+++ b/app/src/main/assets/de/changelog.htm
@@ -25,6 +25,13 @@
 </head>
 <body>
 
+<h1>Version 3.5.4</h1>
+<ul>
+    <li>einige Änderungen wurden vorgenommen</li>
+    <li>Fehler wurden beseitigt...</li>
+
+</ul>
+
 <h1>Version 3.5.3</h1>
 <ul>
     <li>Änderungen in den letzten Updates:</li>
