--- a/app/src/main/assets/tr/changelog.htm
+++ b/app/src/main/assets/tr/changelog.htm
@@ -25,6 +25,13 @@
 </head>
 <body>
 
+<h1>Version 3.5.4</h1>
+<ul>
+    <li>bazi değişiklikler oldu</li>
+    <li>hatalar düzeltildi..</li>
+</ul>
+
+
 <h1>Version 3.5.3</h1>
 <ul>
     <li>Son güncelemelerde yapılan degisikliler:</li>
@@ -39,6 +46,7 @@
     <li>hatalar düzeltildi..</li>
 
 </ul>
+
 
 <h1>Version 3.5.1</h1>
 <ul>
