--- a/app/src/main/assets/en/changelog.htm
+++ b/app/src/main/assets/en/changelog.htm
@@ -26,6 +26,13 @@
 </head>
 <body>
 
+<h1>Version 3.5.4</h1>
+<ul>
+    <li>some changes</li>
+    <li>bugfixes</li>
+</ul>
+
+
 <h1>Version 3.5.3</h1>
 <ul>
     <li>Changes in the last Updates:</li>
