--- a/app/src/main/assets/de/changelog.htm
+++ b/app/src/main/assets/de/changelog.htm
@@ -25,6 +25,14 @@
 </head>
 <body>
 
+<h1>Version 3.5.5</h1>
+<ul>
+    <li>Karten-Modus für den Kompass wurde hinzugefügt</li>
+    <li>Dateiwähler für die Soundauswahl hinzugefügt</li>
+    <li>Neue Sounds</li>
+    <li>Einige Fehler wurden beseitigt...</li>
+</ul>
+
 <h1>Version 3.5.4</h1>
 <ul>
     <li>einige Änderungen wurden vorgenommen</li>
