--- a/app/src/main/assets/en/changelog.htm
+++ b/app/src/main/assets/en/changelog.htm
@@ -26,6 +26,15 @@
 </head>
 <body>
 
+<h1>Version 3.5.5</h1>
+<ul>
+    <li>Added Map-Mode to Compass</li>
+    <li>Added File Chooser to Sounds Dialog</li>
+    <li>Added new sounds</li>
+    <li>bugfixes</li>
+</ul>
+
+
 <h1>Version 3.5.4</h1>
 <ul>
     <li>some changes</li>
