--- a/app/src/main/assets/tr/changelog.htm
+++ b/app/src/main/assets/tr/changelog.htm
@@ -25,6 +25,14 @@
 </head>
 <body>
 
+<h1>Version 3.5.5</h1>
+<ul>
+    <li>Kıble Pusulasına Harita-Modu eklendi</li>
+    <li>Hafızadan Ses seçme özelliği eklendi</li>
+    <li>Yeni Sesler eklendi</li>
+    <li>hatalar düzeltildi..</li>
+</ul>
+
 <h1>Version 3.5.4</h1>
 <ul>
     <li>bazi değişiklikler oldu</li>
