added arabic support

--- a/app/src/main/assets/en/changelog.htm
+++ b/app/src/main/assets/en/changelog.htm
@@ -27,6 +27,14 @@
 </head>
 <body>
 
+<h1>Version 3.6</h1>
+<ul>
+    <li>Added Arabic language support</li>
+    <li>Added Custom Prayer time Calculation Settings</li>
+    <li>bugfixes</li>
+</ul>
+
+
 <h1>Version 3.5.5</h1>
 <ul>
     <li>Added Map-Mode to Compass</li>
