--- a/app/src/main/assets/tr/changelog.htm
+++ b/app/src/main/assets/tr/changelog.htm
@@ -26,6 +26,13 @@
 </head>
 <body>
 
+<h1>Version 3.6</h1>
+<ul>
+    <li>Arapça Dil secenegi eklendi</li>
+    <li>Hesaplama ayarları eklendi</li>
+    <li>hatalar düzeltildi</li>
+</ul>
+
 <h1>Version 3.5.5</h1>
 <ul>
     <li>Kıble Pusulasına Harita-Modu eklendi</li>
