--- a/app/src/main/assets/de/changelog.htm
+++ b/app/src/main/assets/de/changelog.htm
@@ -26,6 +26,14 @@
 </head>
 <body>
 
+
+<h1>Version 3.6</h1>
+<ul>
+    <li>Arabische Sprachauswahl wurde hinzugefügt</li>
+    <li>Eigene Gebetszeit-Berechnungseinstellungen wurden hinzugefügt</li>
+    <li>Einige Fehler wurden beseitigt...</li>
+</ul>
+
 <h1>Version 3.5.5</h1>
 <ul>
     <li>Karten-Modus für den Kompass wurde hinzugefügt</li>
