--- a/app/src/main/assets/de/changelog.htm
+++ b/app/src/main/assets/de/changelog.htm
@@ -27,6 +27,14 @@
 <body>
 
 
+<h1>Version 3.6.1</h1>
+<ul>
+    <li>Menü wurde etwas abgeändert</li>
+    <li>Über Seite wurde hinzugefügt</li>
+    <li>Einige Fehler wurden beseitigt...</li>
+</ul>
+
+
 <h1>Version 3.6</h1>
 <ul>
     <li>Arabische Sprachauswahl wurde hinzugefügt</li>
