--- a/app/src/main/assets/de/changelog.htm
+++ b/app/src/main/assets/de/changelog.htm
@@ -22,10 +22,17 @@
         li { margin-left: 0px;}
         ul { padding-left: 2em;}
 
+
     </style>
 </head>
 <body>
 
+
+<h1>Version 3.6.2</h1>
+<ul>
+    <li>Französische Sprachauswahl hinzugefügt</li>
+    <li>Einige Fehler wurden beseitigt...</li>
+</ul>
 
 <h1>Version 3.6.1</h1>
 <ul>
