--- a/app/src/main/assets/en/changelog.htm
+++ b/app/src/main/assets/en/changelog.htm
@@ -27,6 +27,13 @@
 </head>
 <body>
 
+<h1>Version 3.6.2</h1>
+<ul>
+    <li>added French support</li>
+    <li>bugfixes</li>
+</ul>
+
+
 <h1>Version 3.6.1</h1>
 <ul>
     <li>Menu has changed</li>
