--- a/app/src/main/assets/tr/changelog.htm
+++ b/app/src/main/assets/tr/changelog.htm
@@ -26,10 +26,12 @@
 </head>
 <body>
 
-<h1>Not:</h1>
 
-   <b>Türkiye'de ki zamanların alınmaması kararı dolayısıyla, birçok Cihazın saati otomatik Mod ile kullanılmamaktadır. Bu yüzden manüel olarak zaman dilimini +3 olarak ayarlayıp Saati düzeltmelisiniz. Aksi takdirde Telefonun saati doğru gösteriyor olsada, yanlış ayarlanmış oluyor ve Namaz Vakti veya başka uygulamaları olumsuz etkiliyebiliyor!</b>
-
+<h1>Version 3.6.2</h1>
+<ul>
+    <li>Fransizca desteği eklendi</li>
+    <li>hatalar düzeltildi</li>
+</ul>
 
 
 <h1>Version 3.6.1</h1>
