--- a/app/src/main/assets/de/changelog.htm
+++ b/app/src/main/assets/de/changelog.htm
@@ -23,10 +23,21 @@
         ul { padding-left: 2em;}
 
 
+
+
+
     </style>
 </head>
 <body>
 
+<h1>Version 3.6.3</h1>
+<ul>
+    <li>'Als PDF/CSV exportieren' hinzugefügt</li>
+    <li>CSV Import Funktion hinzugefügt</li>
+    <li>Marokkanische Gebetszeiten hinzugefügt (habous.gov.ma)</li>
+    <li>OSM Geocoder als alternativen Geocoder hinzugefügt</li>
+    <li>Fehler beseitigt</li>
+</ul>
 
 <h1>Version 3.6.2</h1>
 <ul>
