--- a/app/src/main/assets/en/changelog.htm
+++ b/app/src/main/assets/en/changelog.htm
@@ -23,9 +23,20 @@
         li { margin-left: 0px;}
         ul { padding-left: 2em;}
 
+
+
     </style>
 </head>
 <body>
+
+<h1>Version 3.6.3</h1>
+<ul>
+    <li>added 'export to PDF/CSV' Feature</li>
+    <li>added CSV (local/URL) as a time provider</li>
+    <li>added marocain prayer times (habous.gov.ma)</li>
+    <li>added OSM Geocoder as alternative</li>
+    <li>bugfixes</li>
+</ul>
 
 <h1>Version 3.6.2</h1>
 <ul>
