--- a/app/src/main/assets/tr/changelog.htm
+++ b/app/src/main/assets/tr/changelog.htm
@@ -22,10 +22,23 @@
         li { margin-left: 0px;}
         ul { padding-left: 2em;}
 
+
+
+
+
     </style>
 </head>
 <body>
 
+
+<h1>Version 3.6.3</h1>
+<ul>
+    <li>Vakitleri PDF/CSV olarak çıkarma özelliği eklendi</li>
+    <li>CSV'den Vakit okuma özelliği eklendi</li>
+    <li>Fas Namaz Vakitleri eklendi (habous.gov.ma)</li>
+    <li>Alternatif olarak OSM Adres kodlama ayari eklendi</li>
+    <li>hatalar düzeltildi</li>
+</ul>
 
 <h1>Version 3.6.2</h1>
 <ul>
