changed changelog + buildversion++

--- a/app/src/main/assets/en/changelog.htm
+++ b/app/src/main/assets/en/changelog.htm
@@ -31,6 +31,7 @@
 
 <h1>Version 3.6.3</h1>
 <ul>
+    <li>added Russian language</li>
     <li>added 'export to PDF/CSV' Feature</li>
     <li>added CSV (local/URL) as a time provider</li>
     <li>added marocain prayer times (habous.gov.ma)</li>
