--- a/app/src/main/assets/tr/changelog.htm
+++ b/app/src/main/assets/tr/changelog.htm
@@ -33,6 +33,7 @@
 
 <h1>Version 3.6.3</h1>
 <ul>
+    <li>Rusca desteği eklendi</li>
     <li>Vakitleri PDF/CSV olarak çıkarma özelliği eklendi</li>
     <li>CSV'den Vakit okuma özelliği eklendi</li>
     <li>Fas Namaz Vakitleri eklendi (habous.gov.ma)</li>
