--- a/app/src/main/assets/de/changelog.htm
+++ b/app/src/main/assets/de/changelog.htm
@@ -32,6 +32,7 @@
 
 <h1>Version 3.6.3</h1>
 <ul>
+    <li>Russische Sprachauswahl hinzugefügt</li>
     <li>'Als PDF/CSV exportieren' hinzugefügt</li>
     <li>CSV Import Funktion hinzugefügt</li>
     <li>Marokkanische Gebetszeiten hinzugefügt (habous.gov.ma)</li>
