--- a/app/src/main/assets/de/changelog.htm
+++ b/app/src/main/assets/de/changelog.htm
@@ -31,6 +31,17 @@
 </head>
 <body>
 
+<h1>Version 3.6.4</h1>
+<ul>
+    <li>Zeitzonenprobleme wurden behoben</li>
+    <li>Offizielle Malaysia Gebetszeiten wurden hinzugefügt (e-solat.gov.my)</li>
+    <li>Städtesuche wurde verbessert</li>
+    <li>Geocoder wurde auf OpenStreetMaps umgestellt</li>
+    <li>Es wurden einige kleine Änderungen vorgenommen</li>
+    <li>Fehler beseitigt</li>
+</ul>
+
+
 <h1>Version 3.6.3</h1>
 <ul>
     <li>Russische Sprachauswahl hinzugefügt</li>
