--- a/app/src/main/assets/en/changelog.htm
+++ b/app/src/main/assets/en/changelog.htm
@@ -30,6 +30,17 @@
 </head>
 <body>
 
+
+<h1>Version 3.6.4</h1>
+<ul>
+    <li>fixed Timezone</li>
+    <li>added official malaysian prayer times (e-solat.gov.my)</li>
+    <li>improved City search</li>
+    <li>changed geocoder to OpenStreetMaps</li>
+    <li>some changes</li>
+    <li>some fixes</li>
+</ul>
+
 <h1>Version 3.6.3</h1>
 <ul>
     <li>added Russian language</li>
