--- a/app/src/main/assets/tr/changelog.htm
+++ b/app/src/main/assets/tr/changelog.htm
@@ -27,9 +27,21 @@
 
 
 
+
     </style>
 </head>
 <body>
+
+
+<h1>Version 3.6.4</h1>
+<ul>
+    <li>Saat ayarları düzeltildi</li>
+    <li>Malezya Resmi Vakitler eklendi (e-solat.gov.my)</li>
+    <li>Sehir araması geliştirildi</li>
+    <li>Adres kodlama için Google yerine OSM'ye geçildi</li>
+    <li>küçük değişiklikler oldu</li>
+    <li>hatalar düzeltildi</li>
+</ul>
 
 
 <h1>Version 3.6.3</h1>
@@ -44,7 +56,7 @@
 
 <h1>Version 3.6.2</h1>
 <ul>
-    <li>Fransizca desteği eklendi</li>
+    <li>Fransızca desteği eklendi</li>
     <li>hatalar düzeltildi</li>
 </ul>
 
