added changelog for 3.6.5

--- a/app/src/main/assets/de/changelog.htm
+++ b/app/src/main/assets/de/changelog.htm
@@ -22,15 +22,19 @@
         h1 { margin-left: 0px; font-size: 1.1em;}
         li { margin-left: 0px;}
         ul { padding-left: 2em;}
-
-
-
-
-
-
     </style>
 </head>
 <body>
+
+
+<h1>Version 3.6.5</h1>
+<ul>
+    <li>Holländische Sprache hinzugefügt</li>
+    <li>Widgets überarbeitet</li>
+    <li>Einstellung um Widget-Sekunden anzuzeigen</li>
+    <li>einige kleinen Änderungen</li>
+    <li>eine Bugfixes</li>
+</ul>
 
 <h1>Version 3.6.4</h1>
 <ul>
