--- a/app/src/main/assets/en/changelog.htm
+++ b/app/src/main/assets/en/changelog.htm
@@ -24,13 +24,19 @@
         li { margin-left: 0px;}
         ul { padding-left: 2em;}
 
-
-
-
     </style>
 </head>
 <body>
 
+
+<h1>Version 3.6.5</h1>
+<ul>
+    <li>added Dutch language</li>
+    <li>rewrite of widgets</li>
+    <li>added option to show seconds in widget</li>
+    <li>some changes</li>
+    <li>some fixes</li>
+</ul>
 
 <h1>Version 3.6.4</h1>
 <ul>
