--- a/app/src/main/assets/de/changelog.htm
+++ b/app/src/main/assets/de/changelog.htm
@@ -22,6 +22,7 @@
         h1 { margin-left: 0px; font-size: 1.1em;}
         li { margin-left: 0px;}
         ul { padding-left: 2em;}
+
     </style>
 </head>
 <body>
@@ -31,6 +32,7 @@
 <ul>
     <li>Holländische Sprache hinzugefügt</li>
     <li>Widgets überarbeitet</li>
+    <li>Semerkand Kalender aktualisiert, bitte Stadt löschen und neu hinzufügen.</li>
     <li>Einstellung um Widget-Sekunden anzuzeigen</li>
     <li>einige kleinen Änderungen</li>
     <li>eine Bugfixes</li>
