--- a/app/src/main/assets/en/changelog.htm
+++ b/app/src/main/assets/en/changelog.htm
@@ -33,6 +33,7 @@
 <ul>
     <li>added Dutch language</li>
     <li>rewrite of widgets</li>
+    <li>updated Semerkand Calendar, please remove city and re-add it</li>
     <li>added option to show seconds in widget</li>
     <li>some changes</li>
     <li>some fixes</li>
