--- a/app/src/main/assets/tr/changelog.htm
+++ b/app/src/main/assets/tr/changelog.htm
@@ -29,6 +29,7 @@
 <h1>Version 3.6.5</h1>
 <ul>
     <li>Hollanda dili eklendi</li>
+    <li>Semerkand Takvimi güncellendi, Şehiri silip yeniden eklenmesi gerekiyor</li>
     <li>Widgetler yenilendi</li>
     <li>Widgetlerin saniye gösterme ayarı eklendi</li>
     <li>küçük değişiklikler oldu</li>
