--- a/app/src/main/assets/de/changelog.htm
+++ b/app/src/main/assets/de/changelog.htm
@@ -30,7 +30,7 @@
 
 <h1>Version 3.6.5</h1>
 <ul>
-    <li>Holländische Sprache hinzugefügt</li>
+    <li>Niederländische Sprache hinzugefügt</li>
     <li>Widgets überarbeitet</li>
     <li>Semerkand Kalender aktualisiert, bitte Stadt löschen und neu hinzufügen.</li>
     <li>Einstellung um Widget-Sekunden anzuzeigen</li>
