--- a/app/src/main/assets/de/changelog.htm
+++ b/app/src/main/assets/de/changelog.htm
@@ -23,9 +23,21 @@
         li { margin-left: 0px;}
         ul { padding-left: 2em;}
 
+
+
     </style>
 </head>
 <body>
+
+
+<h1>Version 3.6.6</h1>
+<ul>
+    <li>Bosnische Sprachunterstützung</li>
+    <li>Morgengebet und Asr-Sani für für Fazilet ve NamazVakti.com hinzugefügt</li>
+    <li>Fehler bezüglich Adhan behoben</li>
+    <li>Fehler bein laden der Gebetszeiten von CSV behoben</li>
+    <li>einige fehler behoben</li>
+</ul>
 
 
 <h1>Version 3.6.5</h1>
