--- a/app/src/main/assets/en/changelog.htm
+++ b/app/src/main/assets/en/changelog.htm
@@ -24,9 +24,19 @@
         li { margin-left: 0px;}
         ul { padding-left: 2em;}
 
+
     </style>
 </head>
 <body>
+
+<h1>Version 3.6.6</h1>
+<ul>
+    <li>added Bosnian Support</li>
+    <li>added additional morning prayer and Asr-Sani for Fazilet ve NamazVakti.com</li>
+    <li>fixed some issues with Adhan</li>
+    <li>fixed loading Times from CSV</li>
+    <li>some bugfixes</li>
+</ul>
 
 
 <h1>Version 3.6.5</h1>
