--- a/app/src/main/assets/tr/changelog.htm
+++ b/app/src/main/assets/tr/changelog.htm
@@ -26,6 +26,16 @@
 </head>
 <body>
 
+<h1>Version 3.6.6</h1>
+<ul>
+    <li>Bosnaca eklendi</li>
+    <li>Fazilet ve NamazVakti.com için Asr-Sanı ve Sabah Namazı eklendi</li>
+    <li>Ezan ile ilgili sorunlar düzeltildi</li>
+    <li>CSV'den Vakitleri okuma düzeldildi</li>
+    <li>hatalar düzeltildi</li>
+</ul>
+
+
 <h1>Version 3.6.5</h1>
 <ul>
     <li>Hollandaca eklendi</li>
