intro almost done (texts missing)

--- a/app/src/main/assets/tr/changelog.htm
+++ b/app/src/main/assets/tr/changelog.htm
@@ -18,6 +18,7 @@
 <head>
     <meta http-equiv="CONTENT-TYPE" content="text/html; charset=utf-8">
     <style type="text/css">
+        body {color: white}
         h1 { margin-left: 0px; font-size: 1.1em;}
         li { margin-left: 0px;}
         ul { padding-left: 2em;}
