--- a/app/src/main/assets/en/changelog.htm
+++ b/app/src/main/assets/en/changelog.htm
@@ -19,6 +19,7 @@
 <HEAD>
     <META HTTP-EQUIV="CONTENT-TYPE" CONTENT="text/html; charset=utf-8">
     <style type="text/css">
+        body {color: white}
         h1 { margin-left: 0px; font-size: 1.1em;}
         li { margin-left: 0px;}
         ul { padding-left: 2em;}
